# plughive

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.ps1  setup.sh
config/: mcp.json  mcp.local.example.json  plugd.yaml  plughive.local.example.yaml  plughive.yaml  rochana.yaml
docs/: AUTH.md
locales/: en.sh  th.sh
personas/: assistant.md  rochana.md
src/plugd/: __init__.py  __main__.py  app.py  config.py
src/plugd/brain/: persona.py
src/plugd/core/: plugin.py  registry.py
src/plugd/plugs/discord_rochana/: brief_job.py  plug.py
src/plughive/: __init__.py  __main__.py  app.py  config.py
src/plughive/brain/: claude_cli.py
src/plughive/core/: bot.py  plugin.py  proactivity.py  registry.py
src/plughive/plugs/discord/: brief_job.py  manifest.yaml  plug.py
src/plughive/plugs/discord_rochana/: brief_job.py  manifest.yaml  plug.py
src/rochana/: __init__.py  __main__.py  app.py  config.py
src/rochana/core/: plugin.py  registry.py  state.py
src/rochana/plugs/discord_rochana/: brief_job.py  manifest.yaml  plug.py
src/rochana/scheduler/: runner.py
