[project]
name = "rochana"
version = "0.1.0"
description = "ROCHANA — a minimal, plug-and-play personal AI. Claude CLI is the brain, Discord is the face."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "discord.py>=2.3",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "pyyaml>=6.0",
]

[project.scripts]
rochana = "rochana.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rochana"]
